fixes 3226, IE problem where fields in spreadsheet-edit cells don't span enough to be visible

--- a/app/assets/volume/spreadsheet.styl
+++ b/app/assets/volume/spreadsheet.styl
@@ -214,13 +214,9 @@
   width 100%
   select
     word-break normal
-    height 100%
+  select
   input[type='text']
-    height 100%
-    min-height b1+b4
   input[type='date']
+  textarea    
     height 100%
-  textarea
     min-height b1+b4
-    height 100%
-
